--- a/index.html
+++ b/index.html
@@ -10,60 +10,45 @@
     <div class="main">
       <div class="header">
         <div class="img">
-          <img src="user1.jpg" alt="Student Image" />
+          <img src="user2.jpg" alt="Student Image" />
         </div>
         <div class="info">
             <div class="info-row">
                 <div><span class="label">ROLL NO:</span></div>
-                <div><span class="data">205907</span></div>
+                <div><span class="data" style="margin-left:130px;">203475</span></div>
             </div>
             <div class="info-row">
                 <div><span class="label">CANDIDATE'S NAME:</span></div>
-                <div><span class="data">MIRZA OWAIS BAIG</span></div>
+                <div><span class="data">ARMA KHAN</span></div>
             </div>
             <div class="info-row">
                 <div><span class="label">FATHER'S NAME:</span></div>
-                <div><span class="data">TAHIR ILYAS BAIG</span></div>
+                <div><span class="data" style="margin-left:80px;">ANIS AHMAD KHAN</span></div>
             </div>
             <div class="info-row">
                 <div><span class="label">NAME OF INSTITUTE:</span></div>
-                <div><span class="data">SSM INTERMEDIATE COLLEGE</span></div>
+                <div><span class="data" style="margin-left:50px;">APEX HIGHER SEC. SCHOOL</span></div>
             </div>
             <div class="info-row">
                 <div><span class="label">ENROLLMENT NO:</span></div>
-                <div><span class="data">ZUEB/H.S.C/2022/96288</span></div>
+                <div><span class="data">ZUEB/H.S.C/2021/57116</span></div>
             </div>
             <div class="info-row">
                 <div><span class="label">GROUP:</span></div>
-                <div><span class="data">PRE-ENGINEERING</span></div>
+                <div><span class="data" style="margin-left:120px;">HUMANITIES PRIVATE</span></div>
             </div>
             <div class="info-row">
                 <div><span class="label">DATE OF BIRTH:</span></div>
-                <div><span class="data">13-AUG-2003</span></div>
+                <div><span class="data"style="margin-left:80px;">14-NOV-1996</span></div>
             </div>
             <div class="info-row">
                 <div><span class="label">EXAM VENUE:</span></div>
-                <div><span class="data">IDEALISTIC GRAMMER HIGHER SEC. SCHOOL</span></div>
+                <div><span class="data" style="margin-left:80px;">PNG SEC. SCHOOL</span></div>
             </div>
         </div>
       </div>
       
-      <!-- <div class="last-border"></div> -->
     </div>
-    <!-- <div class="container">
-        <div class="header">
-            <img src="user1.jpg" alt="Student Image">
-        </div>
-        <div class="info">
-            <p><span class="label">ROLL NO:</span> 203439</p>
-            <p><span class="label">CANDIDATE'S NAME:</span> EJAZ</p>
-            <p><span class="label">FATHER'S NAME:</span> AALAM KHAN</p>
-            <p><span class="label">NAME OF INSTITUTE:</span> DUA PUBLIC HIGHER SECONDARY SCHOOL</p>
-            <p><span class="label">ENROLLMENT NO:</span> ZUEB/H.S.C/2021/5277</p>
-            <p><span class="label">GROUP:</span> HUMANITIES PRIVATE</p>
-            <p><span class="label">DATE OF BIRTH:</span> 20-Mar-1982</p>
-            <p><span class="label">EXAM VENUE:</span> LITTLE HEAVEN HIGHER SEC. SCHOOL</p>
-        </div>
-    </div> -->
+   
   </body>
 </html>
